--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,13 @@
 @tailwind utilities;
 
 
-.pagination div{
-    gap:10px;
+.pagination div {
+    gap: 10px;
+}
+
+.background-image {
+    background-image: url('https://images.unsplash.com/photo-1542281286-9e0a16bb7366');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
